Created a new file that will run the kinematic controller based on an estimate from an EKF.  Also modified the relevant ROS files.  Right now data/traj_gen.py is generating files for kinemaic_control.cpp and src/kalman_kinematic_control.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,4 @@ rosbuild_add_executable(position_control src/position_control.cpp)
 #rosbuild_add_executable(closed_loop_control src/closed_loop_control.py)
 rosbuild_add_executable(wiimote_control src/wiimote_control.cpp include/wiiuse.h)
 target_link_libraries(wiimote_control ${PROJECT_SOURCE_DIR}/lib/libwiiuse.so)
+rosbuild_add_executable(kalman_controller src/kalman_kinematic_control.cpp)
