A new version of the wiimote control node that relies on cwiid and the ROS driver for the wiimote instead of wiiuse.  I added functionality for sending start strings from the wiimote, as well as emergency stops.  A few parameters can be modified by keyboard through the node as well.  I also added rudimentary handlers for "wiimote timeout."

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,4 @@ target_link_libraries(wiimote_control ${PROJECT_SOURCE_DIR}/lib/libwiiuse.so)
 rosbuild_add_executable(kalman_controller src/kalman_kinematic_control.cpp)
 rosbuild_add_executable(multi_kalman_controller src/multi_kalman_control.cpp)
 rosbuild_add_executable(multi_coordinator src/multi_coordinator.cpp)
+rosbuild_add_executable(new_wiimote src/new_wii.cpp)
