Just updated the vcg a bit, and am in the process of debugging the coordinator. So debug symbols are on in CMakeLists.txt, and the launch file starts it in gdb.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ rosbuild_add_executable(kalman_controller src/kalman_kinematic_control.cpp)
 rosbuild_add_executable(multi_kalman_controller src/multi_kalman_control.cpp)
 
 rosbuild_add_executable(multi_coordinator src/multi_coordinator.cpp)
-rosbuild_add_compile_flags(multi_coordinator "-g -Wall")
+rosbuild_add_compile_flags(multi_coordinator "-ggdb -Wall -O0")
 # add logging functionality
 find_library(LOG4CXX_LIBRARY log4cxx)
 target_link_libraries(multi_coordinator ${LOG4CXX_LIBRARY})
