--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #  Release        : w/o debug symbols, w/ optimization
 #  RelWithDebInfo : w/ debug symbols, w/ optimization
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-set(ROS_BUILD_TYPE Release)
+set(ROS_BUILD_TYPE Debug)
 
 rosbuild_init()
 
@@ -21,19 +21,19 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined services
 #rosbuild_gensrv()
 
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-
 ## add eigen functionality
 find_package(Eigen REQUIRED)
 include_directories(${EIGEN_INCLUDE_DIRS})
 add_definitions(${EIGEN_DEFINITIONS})
 
+## define a function for automatically linking log4cxx:
+find_library(LOG4CXX_LIBRARY log4cxx)
+function(add_logging_executable name sources)
+    rosbuild_add_executable(${name} ${sources})
+    target_link_libraries(${name} ${LOG4CXX_LIBRARY})
+endfunction(add_logging_executable)
+
+## Define all executables:
 rosbuild_add_executable(puppeteer_control src/puppeteercontrol.cpp)
 rosbuild_add_executable(straight_control src/straight_driving.cpp)
 rosbuild_add_executable(kinematic_control src/kinematic_controller.cpp)
@@ -43,12 +43,9 @@ rosbuild_add_executable(wiimote_control src/wiimote_control.cpp include/wiiuse.h
 target_link_libraries(wiimote_control ${PROJECT_SOURCE_DIR}/lib/libwiiuse.so)
 rosbuild_add_executable(kalman_controller src/kalman_kinematic_control.cpp)
 rosbuild_add_executable(multi_kalman_controller src/multi_kalman_control.cpp)
-
-rosbuild_add_executable(multi_coordinator src/multi_coordinator.cpp)
-rosbuild_add_compile_flags(multi_coordinator "-ggdb -Wall -O0")
-# add logging functionality
-find_library(LOG4CXX_LIBRARY log4cxx)
-target_link_libraries(multi_coordinator ${LOG4CXX_LIBRARY})
-
 rosbuild_add_executable(new_wiimote src/new_wii.cpp)
+
+add_logging_executable(multi_coordinator src/multi_coordinator.cpp)
+
+
 
