--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,8 @@ rosbuild_add_executable(straight_control src/straight_driving.cpp)
 rosbuild_add_executable(kinematic_control src/kinematic_controller.cpp)
 rosbuild_add_executable(kinematic_control_3D src/kinematic_controller_3D.cpp)
 rosbuild_add_executable(position_control src/position_control.cpp)
-rosbuild_add_executable(wiimote_control src/wiimote_control.cpp include/wiiuse.h)
-target_link_libraries(wiimote_control ${PROJECT_SOURCE_DIR}/lib/libwiiuse.so)
+rosbuild_add_executable(wiimote_control src/wiimote_control.cpp)
+target_link_libraries(wiimote_control libwiiuse.so)
 rosbuild_add_executable(kalman_controller src/kalman_kinematic_control.cpp)
 rosbuild_add_executable(multi_kalman_controller src/multi_kalman_control.cpp)
 rosbuild_add_executable(new_wiimote src/new_wii.cpp)
